[package]
name = "avl_tree"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "avl_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "test"
path = "src/main.rs"